force-app/main/default/objects/Job_Queue__c/Job_Queue__c.object-meta.xml
<CustomObject>
    <description>The job queue framework to process the asynchronous job in serial mode.</description>
    <label>Job Queue</label>
    <nameField>
        <displayFormat>JOB-{00000}</displayFormat>
        <label>Job Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>