force-app/main/default/objects/Job_Queue__c/fields/End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>End_Datetime__c</fullName>
    <description>The datetime of when the job ended.</description>
    <inlineHelpText>The datetime of when the job ended.</inlineHelpText>
    <label>End Datetime</label>
    <type>DateTime</type>
</CustomField>