force-app/main/default/objects/Job_Queue__c/fields/Job_Handler_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_Class_Name__c</fullName>
    <description>The handler Apex class name to be initiated by Job Queue Worker.</description>
    <inlineHelpText>The handler Apex class name to be initiated by Job Queue Worker.</inlineHelpText>
    <label>Job Handler Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>