force-app/main/default/objects/Job_Queue__c/fields/Job_Handler_Error_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_Error_Record_Ids__c</fullName>
    <description>The record ids that reported with error by job handler in semi-colon separated value. This will be used for retry.</description>
    <inlineHelpText>The record ids that reported with error by job handler in semi-colon separated value. This will be used for retry.</inlineHelpText>
    <label>Job Handler Error Record Ids</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>