force-app/main/default/objects/Job_Queue__c/fields/Job_Handler_Params__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_Params__c</fullName>
    <description>The parameters in json serialized string to be set on the job handler by the Job Queue Worker.</description>
    <inlineHelpText>The parameters in json serialized string to be set on the job handler by the Job Queue Worker.</inlineHelpText>
    <label>Job Handler Params</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>