force-app/main/default/objects/Job_Queue__c/fields/Job_Handler_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_Record_Ids__c</fullName>
    <description>The record ids in semi-colon separated string to be set on the job handler by the Job Queue Worker.</description>
    <inlineHelpText>The record ids in semi-colon separated string to be set on the job handler by the Job Queue Worker.</inlineHelpText>
    <label>Job Handler Record Ids</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>