force-app/main/default/objects/Job_Queue__c/fields/Job_Handler_Success_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_Success_Record_Ids__c</fullName>
    <description>The record ids that reported with success by job handler in semi-colon separated value.</description>
    <inlineHelpText>The record ids that reported with success by job handler in semi-colon separated value.</inlineHelpText>
    <label>Job Handler Success Record Ids</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>