force-app/main/default/objects/Job_Queue__c/fields/Job_Operation__c.field-meta.xml
<CustomField>
    <fullName>Job_Operation__c</fullName>
    <description>The job operation to match the job config metadata.</description>
    <inlineHelpText>The job operation to match the job config metadata.</inlineHelpText>
    <label>Job Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>