force-app/main/default/objects/Job_Queue__c/fields/Job_Queue_Group__c.field-meta.xml
<CustomField>
    <fullName>Job_Queue_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Queue Group</label>
    <referenceTo>Job_Queue_Group__c</referenceTo>
    <relationshipLabel>Job Queues</relationshipLabel>
    <relationshipName>Job_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>