force-app/main/default/objects/Job_Queue__c/fields/Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attempts__c</fullName>
    <description>The number of attempts that have been attempted for the job.</description>
    <inlineHelpText>The number of attempts that have been attempted for the job.</inlineHelpText>
    <label>Number of Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>