force-app/main/default/objects/Job_Queue__c/fields/Number_of_Success_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Success_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The count of job handler success record ids.</description>
    <inlineHelpText>The count of job handler success record ids.</inlineHelpText>
    <label>Number of Success Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>