force-app/main/default/objects/Job_Queue__c/fields/Origin_Job_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Origin_Job_Queue_ID__c</fullName>
    <description>Track the original job queue ID for retry so that we can track back for monitoring purposes.</description>
    <inlineHelpText>Track the original job queue ID for retry so that we can track back for monitoring purposes.</inlineHelpText>
    <label>Origin Job Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>