force-app/main/default/objects/Job_Queue__c/fields/Retry_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the job has been retried.</description>
    <inlineHelpText>Indicates that the job has been retried.</inlineHelpText>
    <label>Retry Attempted</label>
    <type>Checkbox</type>
</CustomField>