force-app/main/default/objects/Job_Queue__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>The source record id that initiated the job. This could be used by wizards for searching purposes.</description>
    <inlineHelpText>The source record id that initiated the job. This could be used by wizards for searching purposes.</inlineHelpText>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>