force-app/main/default/objects/Job_Queue__c/fields/Source_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Name__c</fullName>
    <description>The source record name that initiated the job. This could be used by wizards for searching purposes.</description>
    <inlineHelpText>The source record name that initiated the job. This could be used by wizards for searching purposes.</inlineHelpText>
    <label>Source Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>