force-app/main/default/objects/Job_Queue__c/fields/Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Start_Datetime__c</fullName>
    <description>The datetime of when the job started.</description>
    <inlineHelpText>The datetime of when the job started.</inlineHelpText>
    <label>Start Datetime</label>
    <type>DateTime</type>
</CustomField>