force-app/main/default/objects/Job_Queue__c/listViews/All_Success_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Success_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Job_Operation__c</columns>
    <columns>Job_Handler_Class_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Datetime__c</columns>
    <columns>End_Datetime__c</columns>
    <columns>Number_of_Attempts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Success Jobs</label>
</ListView>